src/auryn/ast/snapshots/auryn__auryn__ast__tests__function_call.snap
---
source: src/auryn/ast/mod.rs
expression: "parse(\"print(1)\")"
---
Ok(
    Node {
        span: Span {
            len: 8,
        },
        kind: Root {
            block: Ok(
                Node {
                    span: Span {
                        len: 8,
                    },
                    kind: Block {
                        statements: [
                            Ok(
                                Node {
                                    span: Span {
                                        len: 8,
                                    },
                                    kind: Expression(
                                        Ok(
                                            Node {
                                                span: Span {
                                                    len: 8,
                                                },
                                                kind: Value(
                                                    Ok(
                                                        Node {
                                                            span: Span {
                                                                len: 8,
                                                            },
                                                            kind: FunctionCall(
                                                                Ok(
                                                                    Node {
                                                                        span: Span {
                                                                            len: 8,
                                                                        },
                                                                        kind: FunctionCall {
                                                                            ident: "print",
                                                                            arguments: [
                                                                                Ok(
                                                                                    Node {
                                                                                        span: Span {
                                                                                            len: 1,
                                                                                        },
                                                                                        kind: Value(
                                                                                            Ok(
                                                                                                Node {
                                                                                                    span: Span {
                                                                                                        len: 1,
                                                                                                    },
                                                                                                    kind: Number(
                                                                                                        Ok(
                                                                                                            Node {
                                                                                                                span: Span {
                                                                                                                    len: 1,
                                                                                                                },
                                                                                                                kind: Number {
                                                                                                                    value: 1,
                                                                                                                },
                                                                                                            },
                                                                                                        ),
                                                                                                    ),
                                                                                                },
                                                                                            ),
                                                                                        ),
                                                                                    },
                                                                                ),
                                                                            ],
                                                                        },
                                                                    },
                                                                ),
                                                            ),
                                                        },
                                                    ),
                                                ),
                                            },
                                        ),
                                    ),
                                },
                            ),
                        ],
                    },
                },
            ),
        },
    },
)
